# complete_pipeline

./: .gitignore  BRAIN_SERVICE_COMPLETE_DOCUMENTATION.md  LATE_OPPORTUNITY_UDP_DETECTION.md  LIVE_TESTING_PLAN.md  README.md  START_ALL_SERVICES.sh  STOP_ALL_SERVICES.sh  SYSTEM_COMPLETE.md  TASK_11_12_COMPLETION.md  TODO.md  UDP_PORT_ARCHITECTURE.md  additionals.txt  brainLog.txt  doubleCheck.txt  howToRun.txt  jito.txt  listentothis.txt  monitor.sh  newthoughts.txt  shredStream.txt
archive/: MEMPOOL_WATCHER_MIGRATION.md
archive/mempool-watcher-20251104/: .env.example  AUDIT_IMPLEMENTATION_COMPLETE.md  Cargo.toml  ENHANCED_MESSAGE_ARCHITECTURE.md  POSITION_UPDATE_ARCHITECTURE.md
archive/mempool-watcher-20251104/src/: alpha_wallet_manager.rs  config.rs  confirmation_broadcaster.rs  decoder.rs  exit_advice.rs  heat_calculator.rs  main.rs  manual_exit.rs  position_tracker.rs  transaction_monitor.rs  tx_confirmed.rs  tx_confirmed_context.rs  udp_publisher.rs  watch_listener.rs  watch_listener_enhanced.rs  watch_sig_enhanced.rs  watch_signature.rs
brain/: .env.example  ARCHITECTURE.md  BRAIN_COMPLETION_SUMMARY.md  BUILD_COMPLETE.md  CACHE_UPDATERS_STATUS.md  CONFIG.md  Cargo.toml  GRPC_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  METRICS_INTEGRATED.md  METRICS_STATUS.md  POSITION_TRACKING_FIX.md  README.md  STEP21_SUMMARY.md  TASK10_VALIDATIONS.md  TASK11_INTEGRATION_TEST.md  TASK5_COMPLETE.md  TASK6_POSITION_SIZING_COMPLETE.md  TASK7_UDP_TEST_COMPLETE.md  TASK8_SCORING_COMPLETE.md  TELEGRAM_INTEGRATION_COMPLETE.md  benchmark.sh  decision.md  quick_metrics_test.sh
brain/data/: brain_decisions.csv
brain/src/: bonding_curve.rs  config.rs  grpc_monitor.rs  main.rs  manual_exit_listener.rs  metrics.rs  mint_reservation.rs  position_lifecycle_logger.rs  position_mapping.rs  signature_tracker.rs  telegram.rs  trade_state.rs
brain/src/decision_engine/: early_scorer.rs  guardrails.rs  logging.rs  mod.rs  position_sizer.rs  position_tracker.rs  scoring.rs  triggers.rs  validation.rs
brain/src/feature_cache/: mint_cache.rs  mod.rs  wallet_cache.rs
brain/src/udp_bus/: deduplicator.rs  exit_advice.rs  messages.rs  mod.rs  position_update.rs  receiver.rs  sender.rs  tx_confirmed_context.rs
data-mining/: Cargo.toml  README.md  config.toml
data-mining/src/: checkpoint.rs  config.rs  hotlist_scorer.rs  latency_tracker.rs  lib.rs  main.rs  momentum_tracker.rs  pyth_http.rs  pyth_subscriber.rs  pyth_subscriber_rpc.rs  window_tracker.rs
data-mining/src/db/: aggregator.rs  checkpoint.rs  mod.rs  writer.rs
data-mining/src/decoder/: mod.rs
data-mining/src/grpc/: mod.rs
data-mining/src/parser/: mod.rs  raydium.rs
data-mining/src/types/: mod.rs
data-mining/src/udp/: batched_sender.rs  mod.rs
execution/: .env.example  Cargo.toml  EXECUTOR_CLEANUP.md  INTEGRATION_COMPLETE.md  JITO_RACE_COMPLETE.md  METRICS_INTEGRATION.md  TASK8_ANALYSIS.md  TASK8_COMPLETE.md  grafana-dashboard.json  metrics.rs  test_atomic_bundle.py  test_mempool_listener.py  verify_jito_format.py
execution/scripts/: LIVE_TEST_GUIDE.sh  broadcast_sol_price.py  emoji_map.toml  test_advice_integration.sh
execution/src/: advice_bus.rs  advice_sender.rs  advisor_queue.rs  config.rs  confirmation_task.rs  database.rs  db.code-workspace  deduplicator.rs  emoji.rs  execution_confirmation.rs  grpc_client.rs  jito.rs  main.rs  main_failed.rs  mempool.rs  mempool_bus.rs  metrics.rs  performance_log.rs  pump_bonding_curve.rs  pump_instructions.rs  slippage.rs  telegram.rs  telemetry.rs  tpu_client.rs  trade_closed.rs  trading.rs  tx_confirmed.rs  watch_sig_sender.rs
execution/src/data/: mod.rs  strategy_loader.rs
files/: 1M_MC_HUNTING_STRATEGY_COMPLETE_REPORT.md  ALL_ISSUES_FIXED_RESULTS.md  ANSWERS_TO_3_QUESTIONS.md  ATOMIC_BUNDLE_COMPLETE.md  BACKTEST_RESULTS_AND_DATA_ISSUES.md  BRAIN_STRUCTURE.md  BRAIN_UPDATED.md  CLEANUP_RECOMMENDATIONS.md  CONFIRMED_TX_WATCHER_COMPLETE.md  CRITICAL_BUGS_FIXED.md  CRITICAL_DUPLICATE_TRADE_FIX.md  CRITICAL_ISSUES_OCT29.md  Code Snippets.md  DATA_MINING_STRUCTURE.md  DOCUMENTATION_AND_TESTING_SUMMARY.md  DUPLICATE_PREVENTION_COMPLETE.md  ENTRY_EXIT_THRESHOLDS.md  EXECUTION_FEEDBACK_COMPLETE.md  EXECUTION_STRUCTURE.md  EXIT_LOGIC_ISSUES.md  FINAL_DOCUMENTATION.md  FINAL_STATUS_COMPLETE.md  GUARDRAILS_FIX_COMPLETE.md  HOW_TO_RUN.md  LOG_ANALYSIS_TPU_FIX.md  MEMPOOL_HEAT_FIX.md  MEMPOOL_WATCHER_STRUCTURE.md  PORT_ARCHITECTURE_FINAL.md  PORT_AUDIT.md  POST_LIVE_TEST_ISSUES.md  PROFIT_ANALYSIS_CLARIFICATION.md  PROGRESSIVE_SLIPPAGE_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  TASK11_MEMPOOL_VERIFICATION.md  TASK11_MEMPOOL_WATCHER_COMPLETE.md  TASK19_THREAD_PINNING_GUIDE.md  TASK4_DEDUPLICATION_COMPLETE.md  TASK5_PYTH_INTEGRATION.md  TASK6_COMPLETE.md  (+9 more)
integration-test/: README.md  run_all_tests.sh  start_services.sh  test_brain.sh  test_data_mining.sh  test_duplicate_prevention.sh  test_e2e.py  test_execution.sh  test_mempool_watcher.sh  test_ports.py
mempool-watcher/: .env.example  Cargo.toml  README.md
mempool-watcher/src/: config.rs  decoder.rs  heat_calculator.rs  main.rs  transaction_monitor.rs  udp_publisher.rs
scripts/: analyze_last_2_days.py  backtest_1m_scorer.py  backtest_all_strategies_30days.py  diagnostic_pnl.py  fix_historical_prices.py  realistic_profit_analysis.py
