[package]
name = "decision_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decision_engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenv = "0.15"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
rusqlite = "0.31"

# Concurrency (for caches)
dashmap = "5.5"
once_cell = "1.19"

# Time
chrono = "0.4"

# Metrics
prometheus = "0.13"
axum = "0.7"

# Serialization (for logging)
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
hex = "0.4"

# Solana SDK
solana-sdk = "1.18"
bs58 = "0.5"
