[package]
name = "decision_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decision_engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC & Yellowstone
yellowstone-grpc-client = "9.1"
yellowstone-grpc-proto = "9.1"
tonic = "0.14"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenv = "0.15"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
rusqlite = "0.31"

# Concurrency (for caches)
dashmap = "5.5"
once_cell = "1.19"
lru = "0.12"

# Time
chrono = "0.4"

# Metrics
prometheus = "0.13"
axum = "0.7"

# Serialization (for logging)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
hex = "0.4"
uuid = { version = "1.7", features = ["v4"] }

# HTTP client (for Telegram)
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3"

# Solana SDK
solana-sdk = "2.1"
solana-client = "2.1"
bs58 = "0.5"

# Utils
futures = "0.3"
async-stream = "0.3"
