[package]
name = "data-mining"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# gRPC & Yellowstone
yellowstone-grpc-client = "9.1"
yellowstone-grpc-proto = "9.1"
tonic = "0.14"

# Solana SDK  
solana-sdk = "2.1"

# Database - SQLite only
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bs58 = "0.5"
base64 = "0.22"
chrono = "0.4"
socket2 = "0.5"
libc = "0.2"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Utils
futures = "0.3"
dotenv = "0.15"
async-stream = "0.3"
rand = "0.8"
dashmap = "5.5"

# HTTP RPC for Pyth polling
solana-client = "2.1"
solana-account-decoder = "2.1"

# HTTP client for Pyth API
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "data_mining"
path = "src/lib.rs"

[[bin]]
name = "data-mining"
path = "src/main.rs"
