[package]
name = "execution-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Solana SDK 2.x (Agave) - to match yellowstone-grpc
solana-client = "2"
solana-sdk = "2"
solana-transaction-status = "2"
spl-token = "6"
spl-associated-token-account = "4"
spl-memo = "5"  # For adding trace_id to transactions

# Jito SDK for bundle submissions
jito-sdk-rust = "0.2.1"
base64 = "0.22"
bincode = "1.3"
anyhow = "1.0"

# Yellowstone gRPC
yellowstone-grpc-client = { path = "../../../yellowstone-grpc/yellowstone-grpc-client" }
yellowstone-grpc-proto = { path = "../../../yellowstone-grpc/yellowstone-grpc-proto" }

#
tonic = "0.12"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"
rusqlite = "0.31"  # SQLite for strategy loading

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Config
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"

# Logging
log = "0.4"
env_logger = "0.11"

# Metrics
prometheus = "0.13"
axum = "0.7"

# Utils
chrono = "0.4"
bs58 = "0.5"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.7", features = ["v4"] }