[package]
name = "mempool-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
dotenv = "0.15"

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Network
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# Data structures
dashmap = "5.5"

# Time
chrono = "0.4"

# Metrics (optional for future)
# prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
